# rho

./: .gitignore  README.md  TODO.md  pyproject.toml
docs/: semantics.md  syntax.md
repro/: mlir_ext_multicontext_crash.py
src/rho/: __init__.py  ast.py  lexer.py  parser.py  repl.py
src/rho/compiler/: __init__.py
src/rho/mlir/: __init__.py  codegen.py  context.py  dialect.py  lower.py  ops.py  outline.py
src/rho/runtime/: __init__.py  repr.py  stdlib.rho
src/rho/tools/: ast_repl.py  lower_repl.py  mlir_repl.py
src/tree-sitter-rho/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
src/tree-sitter-rho/bindings/c/: tree-sitter-rho.pc.in
src/tree-sitter-rho/bindings/go/: binding.go  binding_test.go
src/tree-sitter-rho/bindings/node/: binding.cc  index.js
src/tree-sitter-rho/bindings/python/tests/: test_binding.py
src/tree-sitter-rho/bindings/python/tree_sitter_rho/: __init__.py  binding.c
src/tree-sitter-rho/bindings/rust/: build.rs  lib.rs
src/tree-sitter-rho/bindings/swift/TreeSitterRho/: rho.h
src/tree-sitter-rho/bindings/swift/TreeSitterRhoTests/: TreeSitterRhoTests.swift
src/tree-sitter-rho/queries/: highlights.scm
src/tree-sitter-rho/src/: grammar.json  node-types.json  parser.c
src/tree-sitter-rho/test/corpus/: basics.txt
tests/: test_parser_ast.py
tests/test_mlir/: test_codegen.py  test_dialect.py  test_lower.py
