[project]
name = "rho"
version = "0.1.0"
description = "Stack-based array programming language compiling to MLIR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "pytest-xdist",
    "tree-sitter",
    "prompt_toolkit",
    "mlir-python-bindings",
    "eudsl-python-extras",
]

[project.scripts]
rho-ast-repl = "rho.tools.ast_repl:main"
rho-mlir-repl = "rho.tools.mlir_repl:main"

[build-system]
requires = ["setuptools>=61"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
find-links = ["https://llvm.github.io/eudsl"]
